tetrate/tis801/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-envoyfilter-add-operations
spec:
  validationFailureAction: Enforce
